methods_of_translation/lab4/gen/Grm2Parser.py
# Generated from C:/Users/Legend/PycharmProjects/Translation_lab4/g4\Grm2.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Grm2Parser ( Parser ):

    grammarFileName = "Grm2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'_start_'", "':'", "'->'", "'skip'", 
                     "'|'", "'['", "','", "']'", "'returns'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TERM", "NONTERM", "STRING", "CODE", 
                      "WS" ]

    RULE_start = 0
    RULE_choose_rule = 1
    RULE_skip_rule = 2
    RULE_non_term_rule = 3
    RULE_args = 4
    RULE_non_term_returns = 5
    RULE_arg = 6
    RULE_rightPart = 7
    RULE_ruleToken = 8
    RULE_param = 9

    ruleNames =  [ "start", "choose_rule", "skip_rule", "non_term_rule", 
                   "args", "non_term_returns", "arg", "rightPart", "ruleToken", 
                   "param" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    TERM=13
    NONTERM=14
    STRING=15
    CODE=16
    WS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NONTERM(self):
            return self.getToken(Grm2Parser.NONTERM, 0)

        def choose_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Grm2Parser.Choose_ruleContext)
            else:
                return self.getTypedRuleContext(Grm2Parser.Choose_ruleContext,i)


        def getRuleIndex(self):
            return Grm2Parser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = Grm2Parser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13 or _la==14:
                self.state = 20
                self.choose_rule()
                self.state = 21
                self.match(Grm2Parser.T__0)
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(Grm2Parser.T__1)
            self.state = 29
            self.match(Grm2Parser.NONTERM)
            self.state = 30
            self.match(Grm2Parser.T__0)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13 or _la==14:
                self.state = 31
                self.choose_rule()
                self.state = 32
                self.match(Grm2Parser.T__0)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Choose_ruleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM(self):
            return self.getToken(Grm2Parser.TERM, 0)

        def STRING(self):
            return self.getToken(Grm2Parser.STRING, 0)

        def skip_rule(self):
            return self.getTypedRuleContext(Grm2Parser.Skip_ruleContext,0)


        def non_term_rule(self):
            return self.getTypedRuleContext(Grm2Parser.Non_term_ruleContext,0)


        def getRuleIndex(self):
            return Grm2Parser.RULE_choose_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChoose_rule" ):
                listener.enterChoose_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChoose_rule" ):
                listener.exitChoose_rule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChoose_rule" ):
                return visitor.visitChoose_rule(self)
            else:
                return visitor.visitChildren(self)




    def choose_rule(self):

        localctx = Grm2Parser.Choose_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_choose_rule)
        self._la = 0 # Token type
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.match(Grm2Parser.TERM)
                self.state = 40
                self.match(Grm2Parser.T__2)
                self.state = 41
                self.match(Grm2Parser.STRING)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 42
                    self.skip_rule()


                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.non_term_rule()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Skip_ruleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Grm2Parser.RULE_skip_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkip_rule" ):
                listener.enterSkip_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkip_rule" ):
                listener.exitSkip_rule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkip_rule" ):
                return visitor.visitSkip_rule(self)
            else:
                return visitor.visitChildren(self)




    def skip_rule(self):

        localctx = Grm2Parser.Skip_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_skip_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(Grm2Parser.T__3)
            self.state = 49
            self.match(Grm2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_term_ruleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NONTERM(self):
            return self.getToken(Grm2Parser.NONTERM, 0)

        def rightPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Grm2Parser.RightPartContext)
            else:
                return self.getTypedRuleContext(Grm2Parser.RightPartContext,i)


        def args(self):
            return self.getTypedRuleContext(Grm2Parser.ArgsContext,0)


        def non_term_returns(self):
            return self.getTypedRuleContext(Grm2Parser.Non_term_returnsContext,0)


        def getRuleIndex(self):
            return Grm2Parser.RULE_non_term_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNon_term_rule" ):
                listener.enterNon_term_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNon_term_rule" ):
                listener.exitNon_term_rule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_term_rule" ):
                return visitor.visitNon_term_rule(self)
            else:
                return visitor.visitChildren(self)




    def non_term_rule(self):

        localctx = Grm2Parser.Non_term_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_non_term_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(Grm2Parser.NONTERM)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 52
                self.args()


            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 55
                self.non_term_returns()


            self.state = 58
            self.match(Grm2Parser.T__2)
            self.state = 59
            self.rightPart()
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 60
                self.match(Grm2Parser.T__5)
                self.state = 61
                self.rightPart()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Grm2Parser.ArgContext)
            else:
                return self.getTypedRuleContext(Grm2Parser.ArgContext,i)


        def getRuleIndex(self):
            return Grm2Parser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = Grm2Parser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(Grm2Parser.T__6)
            self.state = 68
            self.arg()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 69
                self.match(Grm2Parser.T__7)
                self.state = 70
                self.arg()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(Grm2Parser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_term_returnsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def args(self):
            return self.getTypedRuleContext(Grm2Parser.ArgsContext,0)


        def getRuleIndex(self):
            return Grm2Parser.RULE_non_term_returns

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNon_term_returns" ):
                listener.enterNon_term_returns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNon_term_returns" ):
                listener.exitNon_term_returns(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_term_returns" ):
                return visitor.visitNon_term_returns(self)
            else:
                return visitor.visitChildren(self)




    def non_term_returns(self):

        localctx = Grm2Parser.Non_term_returnsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_non_term_returns)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(Grm2Parser.T__9)
            self.state = 79
            self.args()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM(self):
            return self.getToken(Grm2Parser.TERM, 0)

        def NONTERM(self):
            return self.getToken(Grm2Parser.NONTERM, 0)

        def getRuleIndex(self):
            return Grm2Parser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = Grm2Parser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            _la = self._input.LA(1)
            if not(_la==13 or _la==14):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RightPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ruleToken(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Grm2Parser.RuleTokenContext)
            else:
                return self.getTypedRuleContext(Grm2Parser.RuleTokenContext,i)


        def getRuleIndex(self):
            return Grm2Parser.RULE_rightPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRightPart" ):
                listener.enterRightPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRightPart" ):
                listener.exitRightPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRightPart" ):
                return visitor.visitRightPart(self)
            else:
                return visitor.visitChildren(self)




    def rightPart(self):

        localctx = Grm2Parser.RightPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rightPart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 90112) != 0:
                self.state = 83
                self.ruleToken()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleTokenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERM(self):
            return self.getToken(Grm2Parser.TERM, 0)

        def NONTERM(self):
            return self.getToken(Grm2Parser.NONTERM, 0)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Grm2Parser.ParamContext)
            else:
                return self.getTypedRuleContext(Grm2Parser.ParamContext,i)


        def CODE(self):
            return self.getToken(Grm2Parser.CODE, 0)

        def getRuleIndex(self):
            return Grm2Parser.RULE_ruleToken

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleToken" ):
                listener.enterRuleToken(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleToken" ):
                listener.exitRuleToken(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleToken" ):
                return visitor.visitRuleToken(self)
            else:
                return visitor.visitChildren(self)




    def ruleToken(self):

        localctx = Grm2Parser.RuleTokenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ruleToken)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(Grm2Parser.TERM)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(Grm2Parser.NONTERM)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 91
                    self.match(Grm2Parser.T__10)
                    self.state = 92
                    self.param()
                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==8:
                        self.state = 93
                        self.match(Grm2Parser.T__7)
                        self.state = 94
                        self.param()
                        self.state = 99
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 100
                    self.match(Grm2Parser.T__11)


                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.match(Grm2Parser.CODE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CODE(self):
            return self.getToken(Grm2Parser.CODE, 0)

        def arg(self):
            return self.getTypedRuleContext(Grm2Parser.ArgContext,0)


        def getRuleIndex(self):
            return Grm2Parser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = Grm2Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(Grm2Parser.CODE)
                pass
            elif token in [13, 14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.arg()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





